2021-06-22  Andrew Burgess  <andrew.burgess@embecosm.com>

	* gdb.server/server-kill.exp: Introduce global kill_pid_of, and
	make use of this in prepare to select which pid we should kill.
	Run all the tests twice with a different kill_pid_of value.
	(prepare): Make use of kill_pid_of.
	(test_stepi): New proc.

2021-06-21  Andrew Burgess  <andrew.burgess@embecosm.com>

	* gdb.python/py-frame.exp: Add Frame.level tests.
	* gdb.python/py-pending-frame-level.c: New file.
	* gdb.python/py-pending-frame-level.exp: New file.
	* gdb.python/py-pending-frame-level.py: New file.

2021-06-21  Andrew Burgess  <andrew.burgess@embecosm.com>

	* gdb.python/py-unwind-user-regs.c: New file.
	* gdb.python/py-unwind-user-regs.exp: New file.
	* gdb.python/py-unwind-user-regs.py: New file.

2021-06-17  Carl Love  <cel@us.ibm.com>

	* gdb.arch/powerpc-power8.exp(bctar, bctarl): Update mnemonics
	to bgetar and bgetarl.
	* gdb.arch/powerpc-power8.s((bctar, bctarl): Update comments
	for mnemonics to bgetar and bnstarl.

2021-06-17  Simon Marchi  <simon.marchi@efficios.com>

	* gdb.base/args.exp: Check target, KFAIL if remote.
	(args_test): Add parameter and use it.

2021-06-17  Simon Marchi  <simon.marchi@efficios.com>

	* gdb.base/args.exp: Remove trailing parenthesis in test names.

2021-06-17  Simon Marchi  <simon.marchi@efficios.com>

	* gdb.base/args.exp: Use $old_gdbflags in all tests.

2021-06-17  Simon Marchi  <simon.marchi@efficios.com>

	* gdb.base/args.exp: Use save_vars.

2021-06-14  Pedro Alves  <pedro@palves.net>

	* gdb.base/annota1.exp: Build list using [list] instead of {}.
	Tell [join] to join with no character.  Build expected pattern in
	separate variable instead of in the -re expression directly.

2021-06-11  Kevin Buettner  <kevinb@redhat.com>

	* gdb.mi/mi-sym-info.exp (114-symbol-info-function test): Increase
	timeout.

2021-06-11  Kevin Buettner  <kevinb@redhat.com>

	* gdb.base/print-symbol-loading.exp (proc test_load_shlib):